<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="masimeon.aad03b.dam.florida.com.aad_act03b.MainActivity"
    android:columnCount="2">

    <TextView
        android:text="@string/capNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/captionNombre"
        android:layout_columnWeight="0.5"
        android:textSize="20dp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hintNombre"
        android:layout_columnWeight="1.5"
        android:id="@+id/txtNombre"
        android:textSize="20dp"/>
    <TextView
        android:text="@string/capDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/captionDNI"
        android:layout_columnWeight="0.5"
        android:textSize="20dp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hintDNI"
        android:layout_columnWeight="1.5"
        android:id="@+id/txtDNI"
        android:textSize="20dp"/>
    <TextView
        android:text="@string/capNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/captionNac"
        android:layout_columnWeight="0.5"
        android:textSize="20dp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:inputType="date"
        android:hint="@string/hintNac"
        android:layout_columnWeight="1.5"
        android:id="@+id/txtNac"
        android:textSize="20dp"/>
    <TextView
        android:text="@string/capSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/captionSex"
        android:layout_columnWeight="0.5"
        android:textSize="20dp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hintSex"
        android:layout_columnWeight="1.5"
        android:id="@+id/txtSex"
        android:textSize="20dp"/>

    <Button
        android:text="@string/capButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:id="@+id/btn" />

</GridLayout>
